# recommender-systems

./: .gitignore  README.md  baseline.ipynb  collaborative.ipynb  collaborative_filtering.ipynb  content_based.ipynb  eda._news.ipynb  eda.ipynb  eda.py  eda_behaviors.ipynb  evaluation.py  hybrid.ipynb  pyproject.toml
lib/: eval.py
src/: baseline.ipynb  collaborative_filtering.ipynb  content_based.ipynb
src/lib/models/: baseline.py  content_based.py  content_based_2.py
