[project]
name = "recommender-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
]
